Fix Task 1 of the Lesson 5 HW: align menu at the center of page and delete margins of the container.

--- a/GoIT/markup/home/lesson5/css/task1.css
+++ b/GoIT/markup/home/lesson5/css/task1.css
@@ -4,7 +4,7 @@ body {
 
 .nav {
     background-color: #1aa4ff;
-    padding: 11px 25%;
+    padding: 11px 15%;
     position: relative;
 }
 
@@ -45,7 +45,7 @@ li ul {
 }
 
 .first-li {
-    padding-left: 40px;
+    padding-left: 240px;
 }
 
 li ul li a {
